my-apps/privacy/sticktok/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sticktock
  labels:
    app.kubernetes.io/name: sticktock
    app.kubernetes.io/component: privacy
