my-apps/privacy/sticktok/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sticktock-backend-service
  namespace: sticktock
  labels:
    app.kubernetes.io/name: sticktock-backend
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 2000
      targetPort: http
  selector:
    app.kubernetes.io/name: sticktock-backend
---
apiVersion: v1
kind: Service
metadata:
  name: sticktock-frontend-service
  namespace: sticktock
  labels:
    app.kubernetes.io/name: sticktock-frontend
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
  selector:
    app.kubernetes.io/name: sticktock-frontend
