my-apps/privacy/sticktok/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sticktok
  namespace: sticktock
  labels:
    app.kubernetes.io/name: sticktok
    app.kubernetes.io/component: routing
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-external
      namespace: gateway
      sectionName: https
  hostnames:
    - "sticktok.vanillax.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - group: ""
          kind: Service
          name: sticktock-backend-service
          port: 2000
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: sticktock-frontend-service
          port: 3000
          weight: 1
